@@ -158,6 +158,8 @@ integrationTest {
             '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED', '--add-opens', 'java.sql/java.sql=ALL-UNNAMED',
             '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
             '--add-opens', 'java.base/java.security=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.security.x509=ALL-UNNAMED',
+            '--add-opens', 'java.base/sun.security.util=ALL-UNNAMED',
             '--add-opens', 'jdk.crypto.ec/sun.security.ec.ed=ALL-UNNAMED',
             '--add-exports', 'java.base/sun.nio.ch=ALL-UNNAMED'
     ]
